# napari-yolov5

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
src/napari_yolov5/: _dock_widget.py  _function.py
src/napari_yolov5/_tests/: detect-napari.py  test_dock_widget.py  test_function.py  train-napari - Copy.py  train-test.py
src/napari_yolov5/resources/: example_yaml.yaml
src/napari_yolov5/runs/train/H2B_2classes/: events.out.tfevents.1616061547.jupyter-mbirdm.397.0  opt.yaml  results.txt
src/napari_yolov5/runs/train/Ki67_1class/: events.out.tfevents.1619664827.jupyter-mbirdm.1200.0  opt.yaml  results.txt
src/napari_yolov5/runs/train/Ki67_Multiclass/: events.out.tfevents.1620625856.jupyter-mbirdm.1835.0  opt.yaml  results.txt
src/napari_yolov5/utils/: activations.py  augmentations.py  autoanchor.py  autobatch.py  callbacks.py  datasets.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
src/napari_yolov5/utils/loggers/wandb/: ._README.md  .___init__.py  .___pycache__  ._log_dataset.py  ._sweep.py  ._sweep.yaml  ._wandb_utils.py
