[metadata]
name = napari-yolov5
version = 0.2.9
author = Richard De Mets
author_email = demets.richard@gmail.com
url=https://github.com/rdemets/napari-yolov5



license = GPL-3.0-only
description = Plugin adapted from Ultralytics to bring YOLOv5 into Napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    matplotlib>=3.2.2
    numpy>=1.18.5
    opencv-python>=4.1.2
    Pillow>=7.1.2
    PyYAML>=5.3.1
    requests>=2.23.0
    scipy>=1.4.1
    torch>=1.9.0
    tqdm>=4.41.0
    seaborn>=0.11.2
    opencv-python>=4.1.2
    tensorboard>=1.15.0
    connected-components-3d>=3.6.0
    torchvision>=0.8.1

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-yolov5 = napari_yolov5
